Update FUNDING.yml with funding platforms
Added supported funding platforms for MrMuneebAli-Bot.

--- a/. github/FUNDING.yml
+++ b/. github/FUNDING.yml
@@ -1,1 +1,55 @@
+# 🏆 Supported Funding Platforms for MrMuneebAli-Bot
 
+# GitHub Sponsors (up to 4 usernames)
+github: 
+  - mruniquehacker
+  - MrMuneebAliOfficial
+
+# Patreon (single username)
+patreon: 
+  - mruniquehacker
+
+# Open Collective (single username)
+open_collective: 
+  - mruniquehacker
+
+# Ko-fi (single username)
+ko_fi: 
+  - mruniquehacker
+
+# Tidelift (example package)
+tidelift: 
+  - npm/mrmuneebali-bot
+
+# Community Bridge
+community_bridge: 
+  - mruniquehacker
+
+# Liberapay
+liberapay: 
+  - mruniquehacker
+
+# IssueHunt
+issuehunt: 
+  - mruniquehacker
+
+# LFX Crowdfunding
+lfx_crowdfunding: 
+  - mruniquehacker
+
+# Polar
+polar: 
+  - mruniquehacker
+
+# Buy Me a Coffee
+buy_me_a_coffee: 
+  - mruniquehacker
+
+# thanks.dev
+thanks_dev: 
+  - mruniquehacker
+
+# Custom links (up to 4 URLs)
+custom:
+  - 'https://www.facebook.com/share/1CCKaE2p5Q/'
+  - 'https://www.buymeacoffee.com/mruniquehacker'
