--- a/. github/FUNDING.yml
+++ b/. github/FUNDING.yml
@@ -2,20 +2,20 @@
 
 # GitHub Sponsors (up to 4 usernames)
 github: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
   - MrMuneebAliOfficial
 
 # Patreon (single username)
 patreon: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # Open Collective (single username)
 open_collective: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # Ko-fi (single username)
 ko_fi: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # Tidelift (example package)
 tidelift: 
@@ -23,33 +23,32 @@ tidelift:
 
 # Community Bridge
 community_bridge: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # Liberapay
 liberapay: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # IssueHunt
 issuehunt: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # LFX Crowdfunding
 lfx_crowdfunding: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # Polar
 polar: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # Buy Me a Coffee
 buy_me_a_coffee: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # thanks.dev
 thanks_dev: 
-  - mruniquehacker
+  - 𝑴𝒓.𝑴𝒖𝒏𝒆𝒆𝒃𝑨𝒍𝒊
 
 # Custom links (up to 4 URLs)
 custom:
-  - 'https://www.facebook.com/share/1CCKaE2p5Q/'
-  - 'https://www.buymeacoffee.com/mruniquehacker'
+  - 'https://www.facebook.com/share/1Hke4HzGSj/'
